# H2Lab_Evaluation_System

./: .gitignore  EMI_calculation.py  RAW_TO_PROCESSED_CALCULATION.md  README.md  TGA_calculation.py  data_preparation.py  db_manager.py  labor_daten.db  main.py  plot_pipeline.py  project_paths.py  setting.py
helper/h2lab_tga_hub/: .env.example  .gitignore  README.md  pyproject.toml  tree.txt
helper/h2lab_tga_hub/src/h2lab_tga_app/: cli.py  main.py  tasks_cli.py
helper/h2lab_tga_hub/src/h2lab_tga_app.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
helper/h2lab_tga_hub/src/h2lab_tga_app/config/: paths.py  settings.py
helper/h2lab_tga_hub/src/h2lab_tga_app/data/: __init__.py  discovery.py
helper/h2lab_tga_hub/src/h2lab_tga_app/desktop/: __init__.py  app.py  context.py  main_window.py  project_selector.py
helper/h2lab_tga_hub/src/h2lab_tga_app/domain/: models.py  protocols.py  tasks.py
helper/h2lab_tga_hub/src/h2lab_tga_app/infra/: filesystem.py  logging.py  prep_config_store.py  repo_root.py  state_store.py  task_store.py
helper/h2lab_tga_hub/src/h2lab_tga_app/pipeline/: theory.py  (+3 more)
helper/h2lab_tga_hub/tests/: test_desktop_context.py  test_discovery.py  test_orchestrator_smoke.py  test_paths.py  test_prep_config_service.py  test_prep_config_store.py  test_project_catalog_service.py  test_repo_root.py  test_run_service.py  test_settings.py  test_task_service.py  test_task_store.py  test_tasks_cli.py  test_tga_adapter_preview_cache.py  test_ui_common_layout.py  test_ui_common_plot_data.py  test_visualize_view_manifest_outputs.py
(+32 files in other folders)
