[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "h2lab-tga-app"
version = "0.1.0"
description = "Modular interactive TGA application scaffold for H2Lab"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "matplotlib>=3.7",
  "python-dotenv>=1.0",
  "pydantic>=2.6",
  "pyarrow>=15.0",
  "PySide6>=6.7",
  "plotly>=5.23",
  "PyYAML>=6.0",
  "scipy>=1.11",
  "statsmodels>=0.14",
  "gspread>=6.0",
  "gspread-dataframe>=4.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6.0",
  "mypy>=1.10"
]

[project.scripts]
h2lab-tga-app = "h2lab_tga_app.main:cli"
h2lab-tga-make-run = "h2lab_tga_app.cli:make_run_cli"
h2lab-tga-desktop = "h2lab_tga_app.desktop.app:main"
h2lab-tga-tasks = "h2lab_tga_app.tasks_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
mypy_path = "src"
